fixing bug pada width body horizontal scroll

--- a/style.css
+++ b/style.css
@@ -43,9 +43,15 @@ table {
 }
 
 /* End reset css */
-html{
-    scroll-behavior: smooth;
-}
+    html{
+        scroll-behavior: smooth;
+        
+    }
+
+    body{
+    overflow-x: hidden;
+    overflow-y: scroll;
+    }
 
 ::-webkit-scrollbar{
     width: 15px;
